 * added a _archive_files variable to specify which file names specify archives (r745*)
 * -R / --recursive switch to turn on recursive push of command line specified directories (r746*)
 * added a 'list "pushdirr"' command, working like "pushdir" but recursive (r746*)
 * the _fbfont variable will contain the current console font file string (r767*)
 * if _want_exif_orientation is set, images will be reoriented according to EXIF metadata (r769!*)
 * mirror/flip is now being applied with respect to the viewport borders (r772,r775*)
 * Pause and Menu keys are now available in -o sdl mode (r776*)
 * added  list 'marked'  to show the list of marked files (r780*)
 * key Del bound to pop the current image from the list (r782*)
 * i:_file loader will store the used loader string (r784*)
 * --offset accepts a range now (using the new _open_offset_retry variable) (EXPERIMENTAL,r795*)
 * if an image has been opened with an offset, i:_open_offset will be set accordingly (EXPERIMENTAL,r796*)

                Version 0.4

 * changed --random and introduced --random-no-seed option
 * customizable status bar file info string (--enable-custom-status-bar)
 * introduced --as-text to render printable bytes as text

                Version 0.4-beta

 * interface to the GraphicsMagic library (more graphics formats supported)
 * introduced bitwise AND and OR operators
 * support for rendering "matrix market" numerical matrix files (with librsb)
 * X mode not anymore default in aalib, available at option 
 * libjpeg usage fixes
 * libpng usage fixes (support for PNG_LIBPNG_VER>=10209)
 * documentation improvements (e.g.: fim man page is auto-generated)
 * "imlib2" X-based output device support 
 * "sdl" output device improvements (fullscreen/mouse/windowed options, I/O, ..)
 * more default consolefont options (e.g.: hardcoded consolefonts support)
 * configure option to disable the fim history file
 * improvements to scale, goto, other commands
 * improved directories reading